<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <item
        android:id="@+id/action_call_contact"
        android:orderInCategory="100"
        android:icon="@drawable/ic_action_communication_phone_orange"
        android:title="@string/llamar" />

    <item
        android:id="@+id/action_write_sms"
        android:orderInCategory="101"
        android:icon="@drawable/ic_action_communication_messenger_orange"
        android:title="@string/escribir" />

    <item
        android:id="@+id/action_share_contact"
        android:orderInCategory="102"
        android:icon="@drawable/ic_action_social_share_orange"
        android:title="@string/share_contact" />

    <item
        android:id="@+id/action_block_contact"
        android:orderInCategory="102"
        android:icon="@drawable/ic_block_orange"
        android:title="@string/ac_block" />

</menu>