<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <android.support.design.widget.TextInputLayout
        android:layout_marginTop="8dp"
        app:counterEnabled="true"
        app:counterMaxLength="40"
        app:counterTextAppearance="@style/Counter"
        app:counterOverflowTextAppearance="@style/CounterOverFlow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/dialog_contact_name"
            android:textSize="@dimen/customEntry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapWords"
            android:hint="@string/name_hint">
            <requestFocus />
        </EditText>
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/text_phone_num_text_input_layout2"
        android:layout_width="match_parent"
        app:counterEnabled="true"
        app:counterTextAppearance="@style/Counter"
        app:counterOverflowTextAppearance="@style/CounterOverFlow"
        app:counterMaxLength="20"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/dialog_contact_number"
            android:textSize="@dimen/customEntry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:hint="@string/phone_hint">
        </EditText>
    </android.support.design.widget.TextInputLayout>

    <CheckBox
        android:checked="true"
        android:textColor="@color/md_blue_grey_700"
        android:id="@+id/persistCheck"
        android:text="@string/save_on_phone_agent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>
