<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.edxavier.cerberus_sms.activities.statistics.StatisticsActivity"
    tools:layout_editor_absoluteY="25dp"
    tools:layout_editor_absoluteX="0dp">

    <android.support.design.widget.AppBarLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/appBarLayout">


        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_sts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:elevation="4dp"
            android:minHeight="?attr/actionBarSize"
            app:layout_scrollFlags="scroll"
            app:popupTheme="@style/AppTheme.PopupOverlay" />


    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:orientation="vertical">

            <include layout="@layout/admob_banner"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:text="@string/call_count_chart"
                android:textStyle="bold" />

            <com.github.mikephil.charting.charts.PieChart
                android:id="@+id/chart_detail"
                android:layout_width="match_parent"
                android:layout_height="280dp" />


            <View
                android:layout_margin="8dp"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:text="@string/income_calls_chart"
                android:textStyle="bold" />
            <com.github.mikephil.charting.charts.PieChart
                android:id="@+id/incomingCallChart"
                android:layout_width="match_parent"
                android:layout_height="280dp" />
            <View
                android:layout_margin="8dp"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"/>
            <TextView
                android:textStyle="bold"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:text="@string/outgo_calls_chart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <com.github.mikephil.charting.charts.PieChart
                android:id="@+id/outgoingCallChart"
                android:layout_width="match_parent"
                android:layout_height="280dp" />


            <com.google.android.gms.ads.AdView
                xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:ads="http://schemas.android.com/apk/res-auto"
                android:id="@+id/adView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                ads:adSize="BANNER"
                ads:adUnitId="@string/id_banner1"
                android:layout_gravity="center_horizontal|bottom">
            </com.google.android.gms.ads.AdView>

            <View
                android:layout_margin="8dp"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"/>

            <TextView
                android:textStyle="bold"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:text="@string/call_time_chart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <com.github.mikephil.charting.charts.PieChart
                android:id="@+id/chart"
                android:layout_width="match_parent"
                android:layout_height="280dp" />
            <View
                android:layout_margin="8dp"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"/>
            <TextView
                android:textStyle="bold"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:text="@string/incall_time_chart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <com.github.mikephil.charting.charts.PieChart
                android:id="@+id/incomingCallTimeChart"
                android:layout_width="match_parent"
                android:layout_height="280dp" />


            <View
                android:layout_margin="8dp"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"/>

            <TextView
                android:textStyle="bold"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:text="@string/outcalls_time_chart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <com.github.mikephil.charting.charts.PieChart
                android:id="@+id/outgoingCallTimeChart"
                android:layout_width="match_parent"
                android:layout_height="280dp" />

            <com.google.android.gms.ads.AdView
                xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:ads="http://schemas.android.com/apk/res-auto"
                android:id="@+id/adView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                ads:adSize="BANNER"
                ads:adUnitId="@string/id_banner1"
                android:layout_gravity="center_horizontal|bottom">
            </com.google.android.gms.ads.AdView>
            <View
                android:layout_margin="8dp"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"/>

            <TextView
                android:textStyle="bold"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:text="@string/contacts_chart_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <com.github.mikephil.charting.charts.PieChart
                android:id="@+id/chart_contacts"
                android:layout_width="match_parent"
                android:layout_height="280dp" />
            <View
                android:layout_margin="8dp"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"/>
            <TextView
                android:textStyle="bold"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:text="@string/sms_chart_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <com.github.mikephil.charting.charts.PieChart
                android:layout_marginBottom="12dp"
                android:id="@+id/chart_messages"
                android:layout_width="match_parent"
                android:layout_height="280dp" />




        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>


</android.support.constraint.ConstraintLayout>
